# WhisperLiveKit-Trivias

./: .gitattributes  .gitignore  pyproject.toml  table_segment_streaming_v1.bundle stable_segment_streaming_v1
compare/: TriviasServer__CURRENT.py  app__STABLE.js  audio_processor__STABLE.py  tokens_alignment__STABLE.py  web_interface__CURRENT.py
compare_stable_current/: TriviasServer__STABLE.py  audio_processor__CURRENT.py  timed_objects__STABLE.py  web_interface__STABLE.py
scripts/: init.sh
whisperlivekit/: TriviasServer.py  __init__.py  audio_processor.py  basic_server.py  core.py  silero_vad_iterator.py  timed_objects.py  tokens_alignment.py
whisperlivekit/diarization/: diart_backend.py
whisperlivekit/simul_whisper/: backend.py  config.py  simul_whisper.py
whisperlivekit/web/: live_transcription.html  live_transcription.js
whisperlivekit/web_trivias/: app.js  index.html  style.css  web_interface.py
