[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperlivekit"
version = "0.2.16.dev0"
description = "Real-time speech-to-text with speaker diarization using Whisper"
readme = "README.md"
authors = [
    { name = "Quentin Fuxa" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech"
]

dependencies = [
    # --- existing core deps ---
    "fastapi",
    "librosa",
    "soundfile",
    "uvicorn",
    "websockets",
    "torchaudio>=2.0.0",
    "torch>=2.0.0",
    "huggingface-hub>=0.25.0",
    "tqdm",
    "tiktoken",
    'triton>=2.0.0; platform_machine == "x86_64" and (sys_platform == "linux" or sys_platform == "linux2")',

    # --- REQUIRED for your current TriviasServer startup path ---
    "faster-whisper",
    "onnxruntime",

    # --- diarization stack (you said: everything ON by default) ---
    "pyannote.audio",
    "pyannote.core",
    "pyannote.pipeline",

    # (optional but commonly needed in audio pipelines; keep only if your code imports it)
    # "numpy<2",
]

[project.optional-dependencies]
translation = ["nllw"]
sentence_tokenizer = ["mosestokenizer", "wtpsplit"]

[project.urls]
Homepage = "https://github.com/GT-GITH/WhisperLiveKit-Trivias.git"

[project.scripts]
whisperlivekit-server = "whisperlivekit.TriviasServer:main"
wlk = "whisperlivekit.TriviasServer:main"

[tool.setuptools]
packages = [
    "whisperlivekit",
    "whisperlivekit.diarization",
    "whisperlivekit.simul_whisper",
    "whisperlivekit.whisper",
    "whisperlivekit.whisper.assets",
    "whisperlivekit.whisper.normalizers",
    "whisperlivekit.web_trivias",
    "whisperlivekit.local_agreement",
    "whisperlivekit.silero_vad_models"
]

[tool.setuptools.package-data]
"whisperlivekit.web_trivias" = ["*.html", "*.css", "*.js", "src/*.svg"]
"whisperlivekit.whisper.assets" = ["*.tiktoken", "*.npz"]
"whisperlivekit.silero_vad_models" = ["*.jit", "*.onnx"]
